Compile test sources at Java 17
Test fixtures here are captured operating-system output, written as
Arrays.asList("line", "line", ...) because oshi-common and oshi-core
compiled test sources at release 8, where text blocks do not exist.
Spotless reflows those lists at lineSplit=120, so source lines stop
corresponding to fixture lines: a fixture cannot be read against the real
command output it copies, and adding one line reflows the whole block.
Text blocks are exempt from that reflow.

Every CI job that runs tests is now on JDK 17 or newer, so raising
maven.compiler.testRelease drops no tested platform. Test classes are
never published, so the Java 8 guarantee oshi-core makes to consumers is
untouched: main stays at release 8 and module-info at release 9, verified
by class file version.

17 is a ceiling rather than a preference. It is exactly the CI floor,
reached in two places with no headroom - AppVeyor Windows, pinned to
jdk17, and Solaris SPARC, whose JDK comes from the remote host's profile
and is not set in this repository. Text blocks arrived in Java 15, so
there is no lower level that delivers the reason for the change.

Only oshi-common and oshi-core are affected. oshi-core-ffm, oshi-metrics
and oshi-benchmark each set their own testRelease, and oshi-demo has no
tests. No module depends on another's test-jar.

FileUtilTest is converted as the proof, which also discharges the pending
move off hand-rolled Files.createTempFile: 8 of its methods already used
@TempDir while 6 hand-rolled a temp file plus a manual delete, which
leaked on any assertion failure. The multiline fixture becomes a text
block, Files.write(path, s.getBytes(UTF_8)) becomes Files.writeString,
and Collectors.toList() becomes Stream.toList(). Mid-test deletes that
feed a file-not-found assertion are behaviour, not cleanup, and are kept.
testReadProcIo deliberately keeps generating its file body from the map
it asserts against; a text block there would duplicate the data.

Two consequences o