@@ -14,13 +14,11 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -30,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -44,27 +41,23 @@ class FileUtilTest {
      * Test read file.
      */
     @Test
-    void testReadFile() {
-        // Write to a temp file
-        Path multilineFile = assertDoesNotThrow(() -> {
-            Path file = Files.createTempFile("oshitest.multiline", null);
-            String s = "Line 1\nLine 2\nThe third line\nLine 4\nLine 5\n";
-            Files.write(file, s.getBytes(StandardCharsets.UTF_8));
-            return file;
-        }, "IO Exception creating or writing to temporary multiline file.");
+    void testReadFile(@TempDir Path tempDir) throws IOException {
+        Path multilineFile = tempDir.resolve("multiline");
+        Files.writeString(multilineFile, """
+                Line 1
+                Line 2
+                The third line
+                Line 4
+                Line 5
+                """);
 
-        // Try the new temp file
         List<String> tempFileStrings = FileUtil.readFile(multilineFile.toString());
         assertThat("Temp file line one mismatch", tempFileStrings.get(0), is("Line 1"));
-        List<String> matchingLines = tempFileStrings.stream().filter(s -> s.startsWith("Line "))
-                .collect(Collectors.toList());
+        List<String> matchingLines = tempFileStrings.stream().filter(s -> s.startsWith("Line ")).toList();
         assertThat("Matching lines mismatch", matchingLines.size(), is(4));
 
-        // Delete the temp file
-        assertDoesNotThrow(() -> Files.deleteIfExists(multilineFile),
-                "IO Exception deleting temporary multiline file.");
-
-        // Try file not found on deleted file
+        // Deleting is the assertion here, not cleanup: readFile must return empty for a file that is not there
+        Files.deleteIfExists(multilineFile);
         assertThat("Deleted file should return empty", FileUtil.readFile(multilineFile.toString()), is(empty()));
     }
 
@@ -72,36 +65,24 @@ class FileUtilTest {
      * Test get*FromFile
      */
     @Test
-    void testGetFromFile() {
-        // Write to temp file
-        Path integerFile = assertDoesNotThrow(() -> {
-            Path file = Files.createTempFile("oshitest.int", null);
-            Files.write(file, "123\n".getBytes(StandardCharsets.UTF_8));
-            return file;
-        }, "IO Exception creating or writing to temporary integer file.");
+    void testGetFromFile(@TempDir Path tempDir) throws IOException {
+        Path integerFile = tempDir.resolve("int");
+        Files.writeString(integerFile, "123\n");
         assertThat("unsigned long from int", FileUtil.getUnsignedLongFromFile(integerFile.toString()), is(123L));
         assertThat("long from int", FileUtil.getLongFromFile(integerFile.toString()), is(123L));
         assertThat("int from int", FileUtil.getIntFromFile(integerFile.toString()), is(123));
         assertThat("string from int", FileUtil.getStringFromFile(integerFile.toString()), is("123"));
 
-        // Delete the temp file
-        assertDoesNotThrow(() -> Files.deleteIfExists(integerFile), "IO Exception deleting temporary integer file.");
-
-        // Write to temp file
-        Path stringFile = assertDoesNotThrow(() -> {
-            Path file = Files.createTempFile("oshitest.str", null);
-            Files.write(file, "foo bar\n".getBytes(StandardCharsets.UTF_8));
-            return file;
-        }, "IO Exception creating or writing to temporary string file.");
+        Path stringFile = tempDir.resolve("str");
+        Files.writeString(stringFile, "foo bar\n");
 
         assertThat("unsigned long from string", FileUtil.getUnsignedLongFromFile(stringFile.toString()), is(0L));
         assertThat("long from string", FileUtil.getLongFromFile(stringFile.toString()), is(0L));
         assertThat("int from string", FileUtil.getIntFromFile(stringFile.toString()), is(0));
         assertThat("string from string", FileUtil.getStringFromFile(stringFile.toString()), is("foo bar"));
-        // Delete the temp file
-        assertDoesNotThrow(() -> Files.deleteIfExists(stringFile), "IO Exception deleting temporary string file.");
 
-        // Try file not found on deleted file
+        // Deleting is the assertion here, not cleanup: every getter must fall back for a file that is not there
+        Files.deleteIfExists(stringFile);
         assertThat("unsigned long from invalid", FileUtil.getUnsignedLongFromFile(stringFile.toString()), is(0L));
         assertThat("long from invalid", FileUtil.getLongFromFile(stringFile.toString()), is(0L));
         assertThat("int from invalid", FileUtil.getIntFromFile(stringFile.toString()), is(0));
@@ -114,19 +95,19 @@ class FileUtilTest {
     @Test
     void testGetFromFileWithDefault(@TempDir Path tempDir) throws IOException {
         Path integerFile = tempDir.resolve("int");
-        Files.write(integerFile, "123\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(integerFile, "123\n");
         assertThat("long from int", FileUtil.getLongFromFile(integerFile.toString(), -1L), is(123L));
         assertThat("int from int", FileUtil.getIntFromFile(integerFile.toString(), -1), is(123));
 
         Path zeroFile = tempDir.resolve("zero");
-        Files.write(zeroFile, "0\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(zeroFile, "0\n");
         // A file holding a genuine zero must not be confused with an absent one, which is the whole point of the
         // overload: the no-argument form returns 0 for both.
         assertThat("long from zero", FileUtil.getLongFromFile(zeroFile.toString(), -1L), is(0L));
         assertThat("int from zero", FileUtil.getIntFromFile(zeroFile.toString(), -1), is(0));
 
         Path stringFile = tempDir.resolve("str");
-        Files.write(stringFile, "foo bar\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(stringFile, "foo bar\n");
         assertThat("long from string", FileUtil.getLongFromFile(stringFile.toString(), -1L), is(-1L));
         assertThat("int from string", FileUtil.getIntFromFile(stringFile.toString(), -1), is(-1));
 
@@ -136,7 +117,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testReadProcIo() {
+    void testReadProcIo(@TempDir Path tempDir) throws IOException {
         Map<String, String> expected = new LinkedHashMap<>();
         expected.put("rchar", "124788352");
         expected.put("wchar", "124802481");
@@ -145,15 +126,12 @@ class FileUtilTest {
         expected.put("read_bytes", "40304640");
         expected.put("write_bytes", "124780544");
         expected.put("cancelled_write_bytes", "42");
-        // Write this to a temp file
-        Path procIoFile = assertDoesNotThrow(() -> {
-            Path file = Files.createTempFile("oshitest.procio", null);
-            for (Entry<String, String> e : expected.entrySet()) {
-                String s = e.getKey() + ": " + e.getValue() + "\n";
-                Files.write(file, s.getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
-            }
-            return file;
-        }, "IO Exception creating or writing to temporary procIo file.");
+        // Deliberately NOT a text block: the file body is derived from the map asserted against below, so a
+        // literal would duplicate the data. Not every fixture wants the new syntax.
+        Path procIoFile = Files.createFile(tempDir.resolve("procio"));
+        for (Entry<String, String> e : expected.entrySet()) {
+            Files.writeString(procIoFile, e.getKey() + ": " + e.getValue() + "\n", StandardOpenOption.APPEND);
+        }
         // Read into map
         Map<String, String> actual = FileUtil.getKeyValueMapFromFile(procIoFile.toString(), ":");
         assertThat("procio size", actual, is(aMapWithSize(expected.size())));
@@ -161,10 +139,8 @@ class FileUtilTest {
             assertThat("procio entry", actual, hasEntry(entry.getKey(), entry.getValue()));
         }
 
-        // Cleanup
-        assertDoesNotThrow(() -> Files.deleteIfExists(procIoFile), "IO Exception deleting temporary procIo file.");
-
-        // Test deleted file
+        // Deleting is the assertion here, not cleanup
+        Files.deleteIfExists(procIoFile);
         actual = FileUtil.getKeyValueMapFromFile(procIoFile.toString(), ":");
         assertThat("procio size", actual, anEmptyMap());
     }
@@ -178,15 +154,14 @@ class FileUtilTest {
     }
 
     @Test
-    void testReadBytesFromURL() throws IOException {
-        // Create temporary files
-        Path file1 = Files.createTempFile("oshitest.file1", null);
-        Path file2 = Files.createTempFile("oshitest.file2", null);
-        Path file3 = Files.createTempFile("oshitest.file3", null);
+    void testReadBytesFromURL(@TempDir Path tempDir) throws IOException {
+        Path file1 = tempDir.resolve("file1");
+        Path file2 = tempDir.resolve("file2");
+        Path file3 = tempDir.resolve("file3");
 
-        Files.write(file1, "Same".getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
-        Files.write(file2, "Same".getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
-        Files.write(file3, "Different".getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
+        Files.writeString(file1, "Same");
+        Files.writeString(file2, "Same");
+        Files.writeString(file3, "Different");
 
         byte[] bytes1 = FileUtil.readFileAsBytes(file1.toUri().toURL());
         byte[] bytes2 = FileUtil.readFileAsBytes(file2.toUri().toURL());
@@ -197,7 +172,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testReadBinaryFile() {
+    void testReadBinaryFile(@TempDir Path tempDir) throws IOException {
         ByteBuffer buff = ByteBuffer.allocate(18);
         buff.order(ByteOrder.nativeOrder());
         buff.putLong(123L);
@@ -207,13 +182,9 @@ class FileUtilTest {
         byte[] arr = new byte[] { 1, 2, 3 };
         buff.put(arr);
 
-        // Write to temp file (snapshot the backing array since buff is reassigned below)
-        byte[] binaryData = buff.array();
-        Path binaryFile = assertDoesNotThrow(() -> {
-            Path file = Files.createTempFile("oshitest.binary", null);
-            Files.write(file, binaryData);
-            return file;
-        }, "IO Exception creating or writing to temporary binary file.");
+        // Snapshot the backing array since buff is reassigned below
+        Path binaryFile = tempDir.resolve("binary");
+        Files.write(binaryFile, buff.array());
 
         // Read from file
         buff = FileUtil.readAllBytesAsBuffer(binaryFile.toString());
@@ -234,9 +205,6 @@ class FileUtilTest {
         array = new byte[3];
         FileUtil.readByteArrayFromBuffer(buff, array);
         assertArrayEquals(arr0, array, "Byte array from buffer at limit should be all 0s");
-
-        // Cleanup
-        assertDoesNotThrow(() -> Files.deleteIfExists(binaryFile), "IO Exception deleting temporary binary file.");
     }
 
     @Test
@@ -248,7 +216,13 @@ class FileUtilTest {
     @Test
     void testReadLinesFromFile(@TempDir Path tempDir) throws IOException {
         Path file = tempDir.resolve("lines.txt");
-        Files.write(file, "line1\nline2\nline3\nline4\nline5\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file, """
+                line1
+                line2
+                line3
+                line4
+                line5
+                """);
 
         List<String> lines = FileUtil.readLines(file.toString(), 3);
         assertThat("should read 3 lines", lines, hasSize(3));
